examples/misc/error/compilation/trace_eval.bfr
open import "std.bfr"

let f l = match l with
  | (a;) -> [*gen_puts a]
  | (a; b) -> [*gen_puts a  *gen_puts b]
  | (a; b; c;) -> [*gen_puts a  *gen_puts b  *gen_puts c]

let main = [
  *f ("1")  // 型が違う
  *f ("2"; "3")
  *f ("4"; "5"; "6")
]